--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -1,3 +1,4 @@
+taipeion-endpoint: https://tpgimtest.gov.taipei/API/MessageFeedService.ashx
 channel-secret: your-channel-secret
 chnnel-access-token: your-channel-access-token
 address: 0.0.0.0
