Fixed typo in config file.

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -1,5 +1,5 @@
 taipeion-endpoint: https://tpgimtest.gov.taipei/API/MessageFeedService.ashx
 channel-secret: your-channel-secret
-chnnel-access-token: your-channel-access-token
+channel-access-token: your-channel-access-token
 address: 0.0.0.0
 port: 443
