--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -3,5 +3,8 @@ channels:
   1: # Your channel ID.
     channel-secret: your-channel-secret
     channel-access-token: your-channel-access-token
+api-platform-endpoint: https://apimtest.gov.taipei
+api-platform-client-id: your-api-platform-client-id
+api-platform-client-token: your-api-platform-client-token
 address: 0.0.0.0
 port: 443
