--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -2,6 +2,7 @@ taipeion-endpoint: https://apimtest.gov.taipei/tsmpc/m-taipeion/MessageFeedServi
 api-platform-endpoint: https://apimtest.gov.taipei # API platform endpoint for test server.
 api-platform-client-id: your-api-platform-client-id # Your API platform client ID.
 api-platform-client-token: your-api-platform-client-token # Your API platform client token.
+llm-endpoint: url-of-your-llm-endpoint # LLM endpoint.
 channels:
   1: # Your channel ID.
     channel-secret: your-channel-secret
